hphp/hack/test/sound_dynamic/typing/push_dynamic_arg.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

<<__SupportDynamicType>>
class Inv<T> { }

function test1(Inv<dynamic> $c):~Inv<int> {
  return $c;
}
